<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/badgeDevelopedBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/smallText"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="@id/badgeRahmatsyah"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/badgeRahmatsyah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ramatsyah"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/badgeDevelopedBy"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <View
        android:id="@+id/badgeDivider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/badgeDevelopedBy"
        app:layout_constraintBottom_toBottomOf="@id/badgeRahmatsyah"
        app:layout_constraintLeft_toRightOf="@id/badgeRahmatsyah"
        android:layout_marginStart="@dimen/spaceMargin"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/badgeSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source"
        android:textSize="@dimen/smallText"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/badgeDivider"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/spaceMargin"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/dezeer_logo"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toBottomOf="@id/badgeSource"
        app:layout_constraintBottom_toBottomOf="@id/badgeRahmatsyah"
        app:layout_constraintLeft_toRightOf="@id/badgeDivider"
        android:layout_marginStart="@dimen/spaceMargin"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/deezer_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>