<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/colorCardBackground"
    app:cardCornerRadius="@dimen/normalMargin"
    android:layout_margin="@dimen/spaceMargin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/trackPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/trackTitle"
            app:layout_constraintBottom_toBottomOf="@id/trackTitle"
            android:paddingStart="@dimen/largeMargin"
            android:paddingTop="@dimen/largeMargin"
            android:paddingBottom="@dimen/largeMargin"
            android:paddingEnd="@dimen/largeMargin"
            android:contentDescription="@string/player" />

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/largeText"
            android:background="@color/colorField"
            app:layout_constraintLeft_toRightOf="@id/trackPlayer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/trackMore"
            android:layout_marginEnd="@dimen/normalMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginBottom="@dimen/largeMargin"/>


        <TextView
            android:id="@+id/trackMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:background="@color/colorField"
            android:textColor="@color/colorField"
            app:layout_constraintRight_toLeftOf="@id/trackFavorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginEnd="@dimen/normalMargin"
            android:layout_marginBottom="@dimen/largeMargin"/>

        <ImageButton
            android:id="@+id/trackFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_border_black"
            android:background="@null"
            android:foreground="@color/colorField"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="@dimen/largeMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginBottom="@dimen/largeMargin"
            android:contentDescription="@string/track_favorite"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>