<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.artist.ArtistActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/AppBarExpanded"
            app:collapsedTitleTextAppearance="@style/AppBarCollapsed"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/artistPicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/artists_picture" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <ImageButton
                android:id="@+id/artistFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_favorite_border_black"
                android:background="@null"
                app:layout_collapseMode="pin"
                android:layout_marginEnd="@dimen/normalMargin"
                android:layout_marginTop="@dimen/normalMargin"
                android:contentDescription="@string/artist_favorite"
                android:layout_gravity="end|top"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/albums"
            android:textStyle="bold"
            android:textSize="@dimen/largeText"
            android:layout_marginStart="@dimen/largeMargin"
            android:layout_marginTop="@dimen/normalMargin"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artistAlbumList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"
            tools:listitem="@layout/view_item_album"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_marginRight="@dimen/normalMargin"
            android:layout_marginLeft="@dimen/normalMargin"
            android:paddingBottom="@dimen/largeMargin"
            android:clipToPadding="false"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>